--- a/package.json
+++ b/package.json
@@ -1,45 +1,76 @@
 {
-  "name": "firebase-emulator-test",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~11.0.1",
-    "@angular/common": "~11.0.1",
-    "@angular/compiler": "~11.0.1",
-    "@angular/core": "~11.0.1",
-    "@angular/forms": "~11.0.1",
-    "@angular/platform-browser": "~11.0.1",
-    "@angular/platform-browser-dynamic": "~11.0.1",
-    "@angular/router": "~11.0.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
-  }
+    "name": "firebase-emulator-test",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^11.0.2",
+        "@angular/cdk": "^11.0.0",
+        "@angular/common": "^11.0.2",
+        "@angular/compiler": "^11.0.2",
+        "@angular/core": "^11.0.2",
+        "@angular/fire": "^6.1.1",
+        "@angular/flex-layout": "^11.0.0-beta.33",
+        "@angular/forms": "^11.0.2",
+        "@angular/http": "^7.2.14",
+        "@angular/material": "^11.0.0",
+        "@angular/platform-browser": "^11.0.2",
+        "@angular/platform-browser-dynamic": "^11.0.2",
+        "@angular/pwa": "^0.1100.2",
+        "@angular/router": "^11.0.2",
+        "@angular/service-worker": "^11.0.2",
+        "@swimlane/ngx-datatable": "^18.0.0",
+        "angular-star-rating": "^4.0.0-beta.3",
+        "chart.js": "^2.9.4",
+        "core-js": "^3.7.0",
+        "css-star-rating": "^1.2.4",
+        "firebase": "^8.1.1",
+        "firebaseui": "^4.7.1",
+        "firebaseui-angular": "^5.1.0",
+        "google-libphonenumber": "^3.2.15",
+        "immutable": "^4.0.0-rc.12",
+        "ng2-ace-editor": "^0.3.9",
+        "ng2-charts": "^2.4.2",
+        "ngx-facebook": "^2.4.0",
+        "reflect-metadata": "~0.1.13",
+        "rxjs": "^6.6.3",
+        "tns-core-modules": "~6.5.21",
+        "zone.js": "^0.11.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1100.2",
+        "@angular/cli": "^11.0.2",
+        "@angular/compiler-cli": "^11.0.2",
+        "@angular/language-service": "^11.0.2",
+        "@types/jasmine": "~3.6.2",
+        "@types/jasminewd2": "~2.0.8",
+        "@types/node": "~14.14.9",
+        "babel-traverse": "6.26.0",
+        "babel-types": "6.26.0",
+        "babylon": "6.18.0",
+        "codelyzer": "~6.0.1",
+        "gulp": "^4.0.2",
+        "gulp-cli": "^2.3.0",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~6.0.0",
+        "karma": "~5.2.3",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.3",
+        "karma-jasmine": "~4.0.1",
+        "karma-jasmine-html-reporter": "^1.5.4",
+        "lazy": "1.0.11",
+        "node-pre-gyp": "0.16.0",
+        "protractor": "~7.0.0",
+        "ts-node": "~9.0.0",
+        "tslint": "~5.20.1",
+        "typescript": "^4.0.5",
+        "yargs": "^16.1.1"
+    }
 }
